style: correct color of label in tail decoration in dark mode

--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -45,6 +45,12 @@ h4:hover a {
   }
 }
 
+body.dark .tail-decoration {
+  .label {
+    color: $link-color-dark;
+  }
+}
+
 .contributors {
   @extend #vertical-center;
 
